[#13] fix: fixed scroll on mobile problem with sidebar

--- a/components/layout/side-bar/side-bar.style.scss
+++ b/components/layout/side-bar/side-bar.style.scss
@@ -95,5 +95,8 @@
     top: 2.4rem;
     width: 100%;
     border-left: unset;
+    &.sidebar__mobile--active {
+      top: 0;
+    }
   }
 }
